Deleted open-iconic. Implemented nvbar buttons. Added new PageAbout.js Moved Jubotron to page Components. Made vert scrollbar always show.

--- a/src/projectEntryData.json
+++ b/src/projectEntryData.json
@@ -23,7 +23,7 @@
           },
           {
             "link": "Solar System",
-            "src": "http://www.shuenyasui.com/SolarSystem.html"
+            "src": "SolarSystem.html"
           },
           {
             "break": 3
@@ -95,7 +95,7 @@
         {
           "src":"images/doublehelix.png",
           "type":"roundedCircle",
-          "link":"http://www.google.com"
+          "link":"DoubleHelixEffect.html"
         }
     },
     {
