--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "https://shuen-yasui.github.io",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
