Fixed GitHub link on Star Field entry. Ran npm update.

--- a/src/projectEntryData.json
+++ b/src/projectEntryData.json
@@ -13,7 +13,7 @@
         },
         {
           "link": "Source available on GitHub",
-          "src": ""
+          "src": "https://github.com/shuen-yasui/Particle-Star-Field"
         },
         {
           "break": 2
